--- a/mandelbulber2/qt/dock_effects.ui
+++ b/mandelbulber2/qt/dock_effects.ui
@@ -179,8 +179,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>571</width>
-            <height>1078</height>
+            <width>555</width>
+            <height>1095</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_34">
@@ -202,7 +202,7 @@
            <item>
             <widget class="MyGroupBox" name="groupCheck_raytraced_reflections">
              <property name="toolTip">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Activate calculation of ray-traced reflections and transparency. Reflectance can be set by &lt;span style=&quot; font-style:italic;&quot;&gt;Material/Reflection. &lt;/span&gt;Transparency settings are in the same tab as reflection.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Activate calculation of ray-traced reflections and transparency. Reflectance can be set by &lt;span style=&quot; font-style:italic;&quot;&gt;Material/Reflection. &lt;/span&gt;Transparency settings are in the same tab as reflection.&lt;br/&gt;Also enable with Monte Carlo global illumination.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
              <property name="title">
               <string>Ray-&amp;traced reflections and transparency</string>
@@ -975,7 +975,7 @@ per pixel:</string>
                    </sizepolicy>
                   </property>
                   <property name="toolTip">
-                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Selection of method to calculate ambient occlusion effect&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+                   <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Selection of method to calculate ambient occlusion effect.&lt;br/&gt;Do not use SSAO method with Monte Carlo option.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
                   </property>
                   <item>
                    <property name="text">
@@ -1256,9 +1256,9 @@ To do mapping of radiance use HDRI texture as a background texture.</string>
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-269</y>
-            <width>553</width>
-            <height>1535</height>
+            <y>0</y>
+            <width>555</width>
+            <height>1705</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_35">
@@ -2715,8 +2715,8 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>571</width>
-            <height>1078</height>
+            <width>569</width>
+            <height>1080</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_36">
@@ -3433,8 +3433,8 @@ Set 100 to keep compatibility with version &lt;=2.12</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>553</width>
-            <height>1110</height>
+            <width>555</width>
+            <height>1236</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_41">
@@ -4474,8 +4474,8 @@ of lights:</string>
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>571</width>
-            <height>1070</height>
+            <width>569</width>
+            <height>1069</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_3">
