--- a/mandelbulber2/formula/ui/mandelbulb_tails_v2.ui
+++ b/mandelbulber2/formula/ui/mandelbulb_tails_v2.ui
@@ -32,7 +32,7 @@
    <item>
     <widget class="QLabel" name="label_44">
      <property name="text">
-      <string notr="true">DeltaDE log is often best</string>
+      <string notr="true">DeltaDE formula. Can force analyticDE with some settings.</string>
      </property>
     </widget>
    </item>
@@ -864,15 +864,15 @@ scale</string>
  </widget>
  <customwidgets>
   <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>MySpinBox</class>
-   <extends>QSpinBox</extends>
-   <header>my_spin_box.h</header>
   </customwidget>
   <customwidget>
    <class>MyCheckBox</class>
@@ -880,9 +880,9 @@ scale</string>
    <header>my_check_box.h</header>
   </customwidget>
   <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
+   <class>MySpinBox</class>
+   <extends>QSpinBox</extends>
+   <header>my_spin_box.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
